lab1/Test/L1-A-8-69.output
Error Type B at Line 12
Error Type B at Line 26
Error Type B at Line 48
